# ai_powered_travel_planner

./: .env  README.md
backend/: app.py  main.py  pyproject.toml
backend/crud/: crud.py
backend/database/: database.py
backend/models/: models.py
backend/routers/: budget.py  hotel.py  itinerary.py  travel.py  user.py
backend/schemas/: schemas.py
frontend/travel-planner-frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
